--- a/index.html
+++ b/index.html
@@ -18,46 +18,47 @@
       gtag('config', 'GT-MJKTJGCK');
     </script>
 
-    <title>Raccordement Électrique Enedis - Service Expert France | raccordement-connect.com</title>
-    <meta name="description" content="Service expert en raccordement électrique Enedis. Maison neuve, photovoltaïque, modification branchement. Processus simplifié, suivi personnalisé, conformité garantie. Appelez 09 77 40 50 60" />
-    <meta name="author" content="raccordement-connect.com" />
-    <link rel="canonical" href="https://www.raccordement-connect.com" />
+    <title>MonElec.net - Raccordement Électrique Enedis Expert France | €120K/mois</title>
+    <meta name="description" content="MonElec.net - Leader du raccordement électrique Enedis en France. Maison neuve, photovoltaïque, modification branchement. Service premium, suivi expert, conformité garantie. Appelez 09 77 40 50 60" />
+    <meta name="author" content="MonElec.net" />
+    <link rel="canonical" href="https://www.monelec.net" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.raccordement-connect.com" />
-    <meta property="og:title" content="Raccordement Électrique Enedis - Service Expert France" />
-    <meta property="og:description" content="Service expert en raccordement électrique Enedis. Processus simplifié, suivi personnalisé, conformité garantie." />
-    <meta property="og:image" content="https://www.raccordement-connect.com/og-image.jpg" />
+    <meta property="og:url" content="https://www.monelec.net" />
+    <meta property="og:title" content="MonElec.net - Raccordement Électrique Enedis Expert France" />
+    <meta property="og:description" content="MonElec.net - Leader du raccordement électrique Enedis. Service premium, suivi expert, conformité garantie." />
+    <meta property="og:image" content="https://www.monelec.net/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="fr_FR" />
-    <meta property="og:site_name" content="raccordement-connect.com" />
+    <meta property="og:site_name" content="MonElec.net" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://www.raccordement-connect.com" />
-    <meta name="twitter:title" content="Raccordement Électrique Enedis - Service Expert France" />
-    <meta name="twitter:description" content="Service expert en raccordement électrique Enedis. Processus simplifié, suivi personnalisé, conformité garantie." />
-    <meta name="twitter:image" content="https://www.raccordement-connect.com/og-image.jpg" />
-    <meta name="twitter:creator" content="@raccoservice" />
-    <meta name="twitter:site" content="@raccoservice" />
+    <meta name="twitter:url" content="https://www.monelec.net" />
+    <meta name="twitter:title" content="MonElec.net - Raccordement Électrique Enedis Expert France" />
+    <meta name="twitter:description" content="MonElec.net - Leader du raccordement électrique Enedis. Service premium, suivi expert, conformité garantie." />
+    <meta name="twitter:image" content="https://www.monelec.net/og-image.jpg" />
+    <meta name="twitter:creator" content="@MonElecNet" />
+    <meta name="twitter:site" content="@MonElecNet" />
 
     <!-- Structured Data - Local Business Schema -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "raccordement-connect.com - Raccordement Électrique Enedis",
-      "url": "https://www.raccordement-connect.com",
-      "logo": "https://www.raccordement-connect.com/logo.png",
-      "image": "https://www.raccordement-connect.com/og-image.jpg",
+      "name": "MonElec.net - Raccordement Électrique Enedis Expert",
+      "url": "https://www.monelec.net",
+      "logo": "https://www.monelec.net/logo.svg",
+      "image": "https://www.monelec.net/og-image.jpg",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+33-9-77-40-50-60",
         "contactType": "Service client"
       },
-      "email": "contact@raccordement-connect.com",
+      "email": "contact@monelec.net",
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "FR",
